Fix header alignment

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ header {
 
 .header-h2 {
   margin-right: auto;
+  align-self: center;
 }
 
 nav {
